[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/background-day.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/ObstacleSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1.66667, 1.66797 )
texture = ExtResource( 2 )
centered = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 150, 427 )
z_index = 1

[node name="Ground" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 700 )

[node name="ObstacleSpawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 750, 427 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Screens" parent="." instance=ExtResource( 7 )]
[connection signal="died" from="Player" to="." method="game_over"]
[connection signal="start_game" from="Screens" to="." method="new_game"]
